implement setting hardware clock
